# Fox-pro-ai

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_FUNCTION_MAP.md  README.md  main.py  pyproject.toml  requirements.txt  toolkit.yaml
docs/: debug-get-moveable-files.md  manifesto.md  powershell-commands.md  powershell-tree.ps1
src/: __init__.py  __main__.py  cli.py  menu.py  types.py
src/commands/: __init__.py  create.py  doctor.py  status.py
src/core/: __init__.py  config.py  constants.py  file_utils.py  i18n.py  paths.py
src/generators/: __init__.py  ai_configs.py  ci_cd.py  docker.py  git.py  project_files.py  scripts.py
src/locales/: __init__.py  en.py
src/mapper/: __init__.py  ast_skeleton.py  context_map.py  fox_trace_map.py  metrics.py  schema_extractor.py  status_generator.py
src/optimizer/: __init__.py  ast_patcher.py  garbage_cleaner.py  heavy_mover.py
src/scanner/: __init__.py  token_scanner.py
templates/bot/: main.py.template
templates/bot/handlers/: __init__.py.template  start.py.template
templates/common/: config.py.template  database.py.template
templates/fastapi/: main.py.template
templates/parser/: scraper.py.template
templates/webapp/: app.js.template  index.html.template  styles.css.template
tests/integration/: test_full_cycle.py
tests/unit/: test_token_scanner.py
